--- a/css/footer.css
+++ b/css/footer.css
@@ -3,76 +3,76 @@ footer {
     position: relative;
     width: 100%;
     background: #DECABA;
-    height: 300px; 
-}
-
-.footer-content .logo{
+    height: 300px;
+  }
+  
+  .footer-content .logo {
     height: 160px;
-}
-
-.footer-ul-container{
+    margin-left: 1100px;
+    width: 200px;
+  }
+  
+  .footer-ul-container {
     width: 45%;
     margin-left: 800px;
-    margin-right: 5px;
     margin-top: -180px;
     margin-bottom: 200px;
-}
-
-.category{
+  }
+  
+  .category {
     width: 200px;
     list-style: none;
-}
-
-.category-title{
+  }
+  
+  .category-title {
     grid-column: span 2;
     text-transform: capitalize;
     color: #381a10;
     font-size: 20px;
     margin-bottom: 20px;
-}
-
-.category .footer-link{
+  }
+  
+  .category .footer-link {
     text-decoration: none;
     text-transform: capitalize;
-    color: #ad988d(255, 255, 255, 0.75);
-}
-
-.footer-link:hover{
+    color: rgba(173, 152, 141, 0.75);
+  }
+  
+  .footer-link:hover {
     color: #381a10;
-}
-
-.footer-title, .info{
+  }
+  
+  .footer-title,
+  .info {
     padding-left: 25px;
-    color: #381a10(255, 255, 255, 0.75);
+    color: rgba(173, 152, 141, 0.75);
     margin: 20px 0;
-    margin-top: 0px;
     text-transform: capitalize;
-}
-
-.footer-title{
+  }
+  
+  .footer-title {
     padding-left: 25px;
     margin-top: -300px;
     color: #381a10;
-}
-
-.social{
+  }
+  
+  .social {
     margin-left: 800px;
     margin-top: 30px;
-
-}
-
-.social-title{
+  }
+  
+  .social-title {
     color: #381a10;
     margin-left: 800px;
     margin-top: -50px;
     text-transform: capitalize;
-}
-
-.social-link:nth-child(1){
+  }
+  
+  .social-link:nth-child(1) {
     margin-left: 0;
-}
-
-.footer-credit{
+  }
+  
+  .footer-credit {
     width: 100%;
     padding: 10px;
     position: absolute;
@@ -81,4 +81,5 @@ footer {
     text-align: center;
     color: #381a10;
     background: rgba(0, 0, 0, 0.2);
-}
+  }
+  
