--- a/css/footer.css
+++ b/css/footer.css
@@ -1,85 +1,97 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 footer {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    background: #DECABA;
-    height: 300px;
-  }
-  
-  .footer-content .logo {
-    height: 160px;
-    margin-left: 1100px;
-    width: 200px;
-  }
-  
-  .footer-ul-container {
-    width: 45%;
-    margin-left: 800px;
-    margin-top: -180px;
-    margin-bottom: 200px;
-  }
-  
-  .category {
-    width: 200px;
-    list-style: none;
-  }
-  
-  .category-title {
-    grid-column: span 2;
-    text-transform: capitalize;
-    color: #381a10;
-    font-size: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .category .footer-link {
-    text-decoration: none;
-    text-transform: capitalize;
-    color: rgba(173, 152, 141, 0.75);
-  }
-  
-  .footer-link:hover {
-    color: #381a10;
-  }
-  
-  .footer-title,
-  .info {
-    padding-left: 25px;
-    color: rgba(173, 152, 141, 0.75);
-    margin: 20px 0;
-    text-transform: capitalize;
-  }
-  
-  .footer-title {
-    padding-left: 25px;
-    margin-top: -300px;
-    color: #381a10;
-  }
-  
-  .social {
-    margin-left: 800px;
-    margin-top: 30px;
-  }
-  
-  .social-title {
-    color: #381a10;
-    margin-left: 800px;
-    margin-top: -50px;
-    text-transform: capitalize;
-  }
-  
-  .social-link:nth-child(1) {
-    margin-left: 0;
-  }
-  
-  .footer-credit {
-    width: 100%;
-    padding: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    text-align: center;
-    color: #381a10;
-    background: rgba(0, 0, 0, 0.2);
-  }
-  
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  background: #DECABA;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.logo {
+  height: 160px;
+  width: 200px;
+}
+
+.footer-ul-container {
+  width: 45%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.category {
+  width: 200px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.category-title {
+  color: #3F3329;
+  font-family: 'Alike';
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: #3F3329;
+  font-family: 'Alike';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.footer-link:hover {
+  color: #381a10;
+}
+
+.footer-title, .info {
+  color: #3F3329;
+  font-family: 'Alike';
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 20px;
+  margin: 0;
+}
+
+.info {
+  margin-top: 10px;
+}
+
+.social {
+  margin-top: 30px;
+}
+
+.social-title {
+  color: #3F3329;
+  font-family: 'Alike';
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  margin-top: 10px;
+}
+
+.footer-credit {
+  width: 100%;
+  padding: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  color: #381a10;
+  background: rgba(0, 0, 0, 0.2);
+}
