--- a/css/footer.css
+++ b/css/footer.css
@@ -1,80 +1,87 @@
-body {
-  margin: 0;
-  padding: 0;
+footer{
+  background-color: #DECABA;
+  overflow: hidden;
 }
 
-footer {
+
+.logo{
+  width: 150px;
+  height: auto;
+}
+.infofooter{
+  display: flex;
+}
+
+.footer-link{
+  display: flex;
+  color: #3F3329;
+  font-family: 'Alike';
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 20px;
+  margin-bottom: 5px;
+
+}
+
+.number3 {
+  grid-column: 2 / 3;
+  margin-top: 20px; /* Adjust the margin-top value as needed */
+}
+
+.footer-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
   overflow: hidden;
   position: relative;
-  width: 100%;
-  background: #DECABA;
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  background-color: #DECABA;
   padding: 20px;
-  box-sizing: border-box;
 }
 
-.logo {
-  height: 160px;
-  width: 200px;
-}
 
 .footer-ul-container {
-  width: 45%;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  padding: 50;
 }
 
 .category {
-  width: 200px;
   list-style: none;
-  padding: 0;
-  margin: 0;
+  margin: 20;
+  padding: 20;
 }
 
 .category-title {
   color: #3F3329;
+  display: flex;
+  font-family: 'Alike';
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+
+.footer-title {
+  color: #3F3329;
+  display: flex;
   font-family: 'Alike';
   font-weight: bold;
   font-size: 22px;
   line-height: 20px;
-  margin-bottom: 20px;
-}
-
-.footer-link {
-  text-decoration: none;
-  color: #3F3329;
-  font-family: 'Alike';
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.footer-link:hover {
-  color: #381a10;
-}
-
-.footer-title, .info {
-  color: #3F3329;
-  font-family: 'Alike';
-  font-weight: bold;
-  font-size: 22px;
-  line-height: 20px;
-  margin: 0;
+  margin-top: 20px;
 }
 
 .info {
-  margin-top: 10px;
+  color: #3F3329;
+  display: flex;
+  font-family: 'Alike';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;
+  margin-bottom: 5px;
 }
 
-.social {
-  margin-top: 30px;
-}
 
 .social-title {
   color: #3F3329;
@@ -82,16 +89,32 @@ footer {
   font-weight: bold;
   font-size: 20px;
   line-height: 20px;
-  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.social {
+  width: 350px;
+  height: auto;
 }
 
 .footer-credit {
-  width: 100%;
-  padding: 10px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
   text-align: center;
-  color: #381a10;
   background: rgba(0, 0, 0, 0.2);
+  height: 20px;
+  font-family: 'Alike';
+  font-weight: bold;
+  font-size: 24px;
+  grid-column: 1 / span 2;
+  padding: 10px 0;
+  overflow: hidden;
+  margin-bottom: 0;
 }
+
+.first {
+  grid-column: 1 / 2;
+}
+
+.footer-social-container {
+  grid-column: 2 / 3;
+}
+
