--- a/css/nav.css
+++ b/css/nav.css
@@ -1,12 +1,12 @@
 .navbar {
     width: 100%;
     height: 110px;
+    padding-top: 0%;
     background: #DECABA;
     mix-blend-mode: normal;
 }
 
 .nav {
-    padding: 10px 2vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -19,10 +19,6 @@
     background: url(image.png);
     border-radius: 50%;
     margin-right: 20px;
-}
-
-.ichrakk{
-    
 }
 
 .brand-name {
